--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                                     </a>
                                 </li>
                             </ul>
-                    
+                        </div>
                     </li>
                     <li class="team__list-detail">
                         <picture>
