--- a/portfolio.html
+++ b/portfolio.html
@@ -134,9 +134,9 @@
                                                             ./images/portfolio/works-1-desktop@2x.webp 2x" type="image/webp" />
                                     <source media="(min-width:1200px)" srcset="./images/portfolio/works-1-desktop.jpg 1x,
                                                             ./images/portfolio/works-1-desktop@2x.jpg 2x" />
-                                    <source media="(min-width:768px)" srcset="./images/Portfolio/works-1-tablet.webp 1x,
+                                    <source media="(min-width:768px)" srcset="./images/portfolio/works-1-tablet.webp 1x,
                                                             ./images/portfolio/works-1-tablet@2x.webp 2x" type="image/webp" />
-                                    <source media="(min-width:768px)" srcset="./images/Portfolio/works-1-tablet.jpg 1x,
+                                    <source media="(min-width:768px)" srcset="./images/portfolio/works-1-tablet.jpg 1x,
                                                             ./images/portfolio/works-1-tablet@2x.jpg 2x" />
                                     <source media="(min-width:320px)" srcset="./images/portfolio/works-1.webp 1x,
                                                             ./images/portfolio/works-1@2x.webp 2x" type="image/webp" />
@@ -247,7 +247,7 @@
                             <div class="portfolio__modal-link">
                                 <picture>
                                     <source media="(min-width:1200px)" srcset="./images/portfolio/works-4-desktop.webp 1x,
-                                                            ./images/Portfolio/works-4-desktop@2x.webp 2x" type="image/webp" />
+                                                            ./images/portfolio/works-4-desktop@2x.webp 2x" type="image/webp" />
                                     <source media="(min-width:1200px)" srcset="./images/portfolio/works-4-desktop.jpg 1x,
                                                             ./images/portfolio/works-4-desktop@2x.jpg 2x" />
                                     <source media="(min-width:768px)" srcset="./images/portfolio/works-4-tablet.webp 1x,
@@ -336,7 +336,7 @@
                                                             ./images/portfolio/works-6@2x.webp 2x" type="image/webp" />
                                     <source media="(min-width:320px)" srcset="/images/portfolio/works-6.jpg 1x,
                                                             ./images/portfolio/works-6@2x.jpg 2x" />
-                                    <img src="#" alt="Монитор"p
+                                    <img src="#" alt="Монитор">
                                 </picture>
                                 <div class="portfolio__modal-block">
                                     <p class="portfolio__modal-text">
